--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9090
 #db config
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_apis
 spring.datasource.username=root
-spring.datasource.password=7777777
+spring.datasource.password=77777
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
