--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=blog-app-apis
 
-server.port=9090
+server.port=${PORT}
 
 #db config
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_apis
-spring.datasource.username=root
-spring.datasource.password=77777
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
