--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,13 @@ spring.servlet.multipart.max-request-size=10MB
 
 project.image = images/
 
+logging.level.org.springframework.security = DEBUG
+
+spring.security.user.name= root
+spring.security.user.password= root
+spring.security.user.roles=ADMIN
+
+
 
 
 
